--- a/src/dashboard/templates/form_builder/form_type/list.html
+++ b/src/dashboard/templates/form_builder/form_type/list.html
@@ -6,7 +6,7 @@
     <div class="col-12">
         {% if user.is_superuser or user|has_group:"Admin" %}
             <div class="float-right mb-3">
-                <a href="{% url 'dashboard:form_builder:create-form-type' %}"
+                <a href="{% url 'dashboard:form_builder:create_form_type' %}"
                     class="btn btn-primary btn-sm rounded-xl">
                     <i class="fa fa-plus mr-2"></i>
                     {% translate 'Create Form Type' %}
@@ -47,7 +47,7 @@
             spin.show();
             $.ajax({
                 type: 'GET',
-                url: "{% url 'dashboard:form_builder:form-type-list' %}",
+                url: "{% url 'dashboard:form_builder:list_form_type' %}",
                 data: {},
                 success: function(response){
                     spin.hide();
