--- a/src/dashboard/templates/layouts/sidebar.html
+++ b/src/dashboard/templates/layouts/sidebar.html
@@ -67,6 +67,17 @@
                 </li>
             </ul>
         </nav>
+        <nav class="mt-2">
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
+                <li class="nav-item">
+                    <a href="{% url 'dashboard:form_builder:list_form_type' %}"
+                       class="nav-link {% if active_level1 == 'form_types' %}active{% endif %}">
+                        <i class="nav-icon fa fa-comment-alt"></i>
+                        <p>List Forms</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
         <nav class="toogle-sidebar-button">
             <ul class="nav nav-pills nav-sidebar flex-column">
