--- a/src/dashboard/templates/form_builder/form/form_list.html
+++ b/src/dashboard/templates/form_builder/form/form_list.html
@@ -5,27 +5,26 @@
         <table id="table" class="table">
             <thead>
                 <tr>
-                    <th>{% translate 'Form Type' %}</th>
-                    <th>{% translate 'Task' %}</th>
-                    <th>{% translate 'Couch Id'%}</th>
+                    <th>{% translate 'Form Name' %}</th>
+                    <th>{% translate 'Description' %}</th>
+                    <th>{% translate 'Couch Id' %}</th>
                     <th width="20%">{% translate 'Action' %}</th>
                 </tr>
             </thead>
             <tbody>
-                {% for form_type in form_types %}
+                {% for form in forms %}
                     <tr>
-                        <td>{{ form_type.name }}</td>
-                        <td>{{ form_type.content_type}}</td>
-                        <!-- <td>{{ form_type.content_object}}</td> -->
-                        <td>{{ form_type.couch_id}}</td>
+                        <td>{{ form.name }}</td>
+                        <td>{{ form.description }}</td>                        
+                        <td>{{ form.couch_id }}</td>
                         <td>
                             {% if user.is_superuser or user|has_group:"Admin" %}
-                                <a href="{% url 'dashboard:form_builder:update_form_type' form_type.pk %}"
+                                <a href="{% url 'dashboard:form_builder:update_form' form.pk %}"
                                     class="btn btn-primary btn-xs" title="{% translate 'Edit' %}">
                                     <span class="_web">{% translate 'Edit' %}</span>
                                     <span class="_mobile"><i class="fa fa-edit"></i></span>
                                 </a>
-                                <a href="{% url 'dashboard:form_builder:delete_form_type' form_type.pk %}"
+                                <a href="{% url 'dashboard:form_builder:delete_form' form.pk %}"
                                     class="btn btn-danger btn-sx" title="{% translate 'Delete' %}">
                                     <span class="_web">{% translate 'Delete' %}</span>
                                     <span class="_mobile"><i class="fa fa-trash"></i></span>
@@ -42,7 +41,8 @@
 <script type="text/javascript">
     $(document).ready(function() {
         {% get_current_language as lang %}
-        let table = $('table').DataTable({
+        
+        let table = $('#table').DataTable({
             language: {
                 url: '{% static 'AdminLTE/plugins/datatables/locale/lang.json' %}'.replace('lang', '{{ lang }}')
             },
