--- a/src/dashboard/templates/layouts/sidebar.html
+++ b/src/dashboard/templates/layouts/sidebar.html
@@ -70,7 +70,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu">
                 <li class="nav-item">
-                    <a href="{% url 'dashboard:form_builder:list_form_type' %}"
+                    <a href="{% url 'dashboard:form_builder:list' %}"
                        class="nav-link {% if active_level1 == 'form_types' %}active{% endif %}">
                         <i class="nav-icon fa fa-comment-alt"></i>
                         <p>List Forms</p>
