--- a/src/dashboard/templates/tasks/create_task.html
+++ b/src/dashboard/templates/tasks/create_task.html
@@ -31,6 +31,7 @@
                             <div class="col-6">
                                 {% bootstrap_field form.name %}
                                 {% bootstrap_field form.description %}
+                                {% bootstrap_field form.form_type %}
                             </div>
                         </div>                     
                         
