--- a/src/dashboard/templates/tasks/update.html
+++ b/src/dashboard/templates/tasks/update.html
@@ -15,6 +15,7 @@
                             <div class="col-6">
                                 {% bootstrap_field form.name %}
                                 {% bootstrap_field form.description %}
+                                {% bootstrap_field form.form_type %}
                             </div>
                         </div> 
                     </div>                     
