--- a/src/dashboard/templates/projects/list.html
+++ b/src/dashboard/templates/projects/list.html
@@ -37,7 +37,7 @@
                 <div class="card-body table-responsive">
                     <table id="table" class="table">
                         <thead>
-                        <tr>
+                        <tr>The date of offer cannot be later than today
                             <th>{% translate 'Project Name' %}</th>
                             <th>{% translate 'Description' %}</th>
                             <th>{% translate 'Couch Id' %}</th>
